[gd_scene load_steps=19 format=2]

[ext_resource path="res://Game/Parent/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Characters/Barrel/Barrel.png" type="Texture" id=2]
[ext_resource path="res://Game/Characters/Barrel/Barrel.gd" type="Script" id=3]
[ext_resource path="res://Game/Characters/Barrel/BONK.wav" type="AudioStream" id=4]
[ext_resource path="res://Misc/greyscale.shader" type="Shader" id=5]
[ext_resource path="res://Game/Characters/Barrel/BarrelWin.wav" type="AudioStream" id=6]
[ext_resource path="res://Game/Characters/Barrel/BarrelSpawn.wav" type="AudioStream" id=7]
[ext_resource path="res://Game/Characters/Barrel/BarrelSpeedIcon.png" type="Texture" id=8]
[ext_resource path="res://Game/Characters/Barrel/BarrelDashIcon.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.2866, 37.4148 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/enabled = false

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.996078, 0.705882, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=4]
resource_local_to_scene = true
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.996078, 0.705882, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="CircleShape2D" id=5]
radius = 59.5689

[sub_resource type="CircleShape2D" id=6]
radius = 315.154

[sub_resource type="Animation" id=7]
resource_name = "Spin"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 25.0, -45.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Uga"
tracks/0/type = "value"
tracks/0/path = NodePath("Bear:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -128.953 ), Vector2( 0, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bear:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StreamTexture" id=9]
load_path = "res://.import/uga.png-d6f6c9cb6e554fb1aa9ea3beb2875a73.stex"

[node name="Barrel" instance=ExtResource( 1 )]
script = ExtResource( 3 )
maxHealth = 50
maxMoveSpeed = 700.0
maxAmmo = 0
ability1Cooldown = 3.0
ability2Cooldown = 8.0
killLines = PoolStringArray( "res://Game/Characters/Barrel/BarrelKill.wav" )
dashSpeed = 5000.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Graphics" parent="." index="1"]
material = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Graphics" index="0"]
use_parent_material = true
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )

[node name="Ability1" parent="UI/Main/CenterContainer2/VBoxContainer/Abilities/HBoxContainer" index="0"]
custom_styles/panel = SubResource( 3 )
icon = ExtResource( 9 )

[node name="Ability2" parent="UI/Main/CenterContainer2/VBoxContainer/Abilities/HBoxContainer" index="1"]
custom_styles/panel = SubResource( 4 )
icon = ExtResource( 8 )

[node name="Tag" parent="." index="5"]
position = Vector2( 0, 45 )

[node name="Death" parent="." index="6"]
stream = ExtResource( 4 )

[node name="Spawn" parent="." index="7"]
stream = ExtResource( 7 )

[node name="Win" parent="." index="8"]
stream = ExtResource( 6 )

[node name="Damage" type="Area2D" parent="." index="13"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage" index="0"]
shape = SubResource( 5 )

[node name="Hit" type="AudioStreamPlayer2D" parent="." index="14"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Speed" type="Area2D" parent="." index="15"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Speed" index="0"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="16"]
anims/Spin = SubResource( 7 )
anims/Uga = SubResource( 8 )

[node name="Bear" type="Sprite" parent="." index="17"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -200 )
scale = Vector2( 0.0758554, 0.119473 )
texture = SubResource( 9 )
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
[connection signal="body_entered" from="Speed" to="." method="_on_Speed_body_entered"]
[connection signal="body_exited" from="Speed" to="." method="_on_Speed_body_exited"]
